feat: 조회된 각 주문에 상품들 조회되게 필드 및 속성 추가(변경)