@@ -1,8 +1,6 @@
 package com.team2.demo.domain.order.dto;
 
 import com.team2.demo.domain.order.entity.Order;
-import com.team2.demo.domain.order.entity.Order.DeliveryStatus;
-import com.team2.demo.domain.product.entity.Product;
 import lombok.*;
 
 import java.time.LocalDateTime;
@@ -17,22 +15,25 @@ public class OrderDto {
     private String orderId;
     private LocalDateTime orderDate;
     private Integer totalPrice;
-    private DeliveryStatus deliveryStatus;
+    private Order.DeliveryStatus deliveryStatus;
     private String buyerEmail;
-    private List<String> productNames;
+    private List<ProductItem> items;
 
-    private Integer zipCode;
-    private String deliveryAddress;
+    @Getter
+    @AllArgsConstructor
+    public static class ProductItem {
+        private String name;
+        private int quantity;
+    }
 
-    // 종현 : 반환 타입을 OrderDto로 변경
-    public OrderDto (Order order) {
+    public OrderDto(Order order) {
         this.orderId = order.getOrderUuid();
         this.orderDate = order.getCreateDate();
         this.totalPrice = order.getTotalAmount();
         this.deliveryStatus = order.getDeliveryStatus();
         this.buyerEmail = order.getUser().getEmail();
-        this.productNames = order.getProducts().stream()
-                .map(product -> product.getProductName())
-                .toList();
+        this.items = order.getProducts().stream()
+                .map(product -> new ProductItem(product.getProductName(), 1)) // 수량 수동 변경
+                .collect(Collectors.toList());
     }
 }
